Update Knight.java
cleaned up the getPossibleMoves method for the knight